--- a/package.json
+++ b/package.json
@@ -1,22 +1,34 @@
 {
   "author": "Deskpro",
-  "name": "@deskpro/react-datepicker-hijri",
+  "name": "@smartphonedesign/react-datepicker-hijri",
   "description": "A simple and reusable datepicker component for React",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "license": "MIT",
-  "homepage": "https://github.com/deskpro/react-datepicker-hijri",
+  "homepage": "https://github.com/smartphonedesign/react-datepicker-hijri",
   "main": "lib",
   "module": "es",
   "unpkg": "dist/react-datepicker.min.js",
   "style": "dist/react-datepicker.min.css",
-  "files": ["*.md", "dist", "lib", "es", "src/stylesheets"],
-  "keywords": ["react", "datepicker", "calendar", "date", "react-component"],
+  "files": [
+    "*.md",
+    "dist",
+    "lib",
+    "es",
+    "src/stylesheets"
+  ],
+  "keywords": [
+    "react",
+    "datepicker",
+    "calendar",
+    "date",
+    "react-component"
+  ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/deskpro/react-datepicker-hijri.git"
+    "url": "git://github.com/smartphonedesign/react-datepicker-hijri.git"
   },
   "bugs": {
-    "url": "https://github.com/deskpro/react-datepicker-hijri/issues"
+    "url": "https://github.com/smartphonedesign/react-datepicker-hijri/issues"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -101,39 +113,30 @@
     "eslint": "eslint {src,test,docs-site/src}/**/*.{js,jsx} *.js",
     "flow": "flow",
     "precommit": "lint-staged",
-    "sass-lint":
-      "sass-lint --config .sass-lint.yml 'src/stylesheets/*.scss, docs-site/src/*.scss' -i 'docs-site/src/higlight.scss, docs-site/src/reset.scss'",
+    "sass-lint": "sass-lint --config .sass-lint.yml 'src/stylesheets/*.scss, docs-site/src/*.scss' -i 'docs-site/src/higlight.scss, docs-site/src/reset.scss'",
     "lint": "run-p eslint flow sass-lint",
     "start": "cross-env MODULES=false node server.js",
     "test": "cross-env NODE_ENV=test karma start karma.conf.js --single-run",
     "prepublish": "test $(npm -v | tr . '\\n' | head -n 1) -ge '4' || exit 1",
     "prepare": "npm run build",
-    "codecov":
-      "cat coverage/*/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js",
+    "codecov": "cat coverage/*/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js",
     "prebuild": "rimraf es lib dist",
     "build": "cross-env NODE_ENV=production run-p build:** && run-p css:**",
-    "build-dev":
-      "cross-env NODE_ENV=development run-p build:** && run-p css:**",
-    "css:prod":
-      "sass src/stylesheets/datepicker.scss  dist/react-datepicker.min.css",
-    "css:modules:prod":
-      "sass src/stylesheets/datepicker-cssmodules.scss  dist/react-datepicker-cssmodules.min.css",
-    "css:dev":
-      "sass src/stylesheets/datepicker.scss  dist/react-datepicker.css",
-    "css:modules:dev":
-      "sass src/stylesheets/datepicker-cssmodules.scss  dist/react-datepicker-cssmodules.css",
-    "build:es":
-      "cross-env BABEL_ENV=es rollup -c -i src/index.jsx -o es/index.js",
-    "build:cjs":
-      "cross-env BABEL_ENV=cjs rollup -c -i src/index.jsx -o lib/index.js",
-    "build:umd:dev":
-      "cross-env BABEL_ENV=es rollup -c rollup.umd.config.js -i src/index.jsx -o dist/react-datepicker.js",
-    "build:umd:prod":
-      "cross-env BABEL_ENV=es rollup -c rollup.umd.config.js -i src/index.jsx -o dist/react-datepicker.min.js",
-    "build:docs":
-      "cross-env MODULES=false webpack --config webpack.docs.config.js"
+    "build-dev": "cross-env NODE_ENV=development run-p build:** && run-p css:**",
+    "css:prod": "sass src/stylesheets/datepicker.scss  dist/react-datepicker.min.css",
+    "css:modules:prod": "sass src/stylesheets/datepicker-cssmodules.scss  dist/react-datepicker-cssmodules.min.css",
+    "css:dev": "sass src/stylesheets/datepicker.scss  dist/react-datepicker.css",
+    "css:modules:dev": "sass src/stylesheets/datepicker-cssmodules.scss  dist/react-datepicker-cssmodules.css",
+    "build:es": "cross-env BABEL_ENV=es rollup -c -i src/index.jsx -o es/index.js",
+    "build:cjs": "cross-env BABEL_ENV=cjs rollup -c -i src/index.jsx -o lib/index.js",
+    "build:umd:dev": "cross-env BABEL_ENV=es rollup -c rollup.umd.config.js -i src/index.jsx -o dist/react-datepicker.js",
+    "build:umd:prod": "cross-env BABEL_ENV=es rollup -c rollup.umd.config.js -i src/index.jsx -o dist/react-datepicker.min.js",
+    "build:docs": "cross-env MODULES=false webpack --config webpack.docs.config.js"
   },
   "lint-staged": {
-    "*.{js,jsx,json,css,scss,md}": ["prettier --write", "git add"]
+    "*.{js,jsx,json,css,scss,md}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
