--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "smartphonedesign",
   "name": "@smartphonedesign/react-datepicker-hijri",
   "description": "A simple and reusable datepicker component for React",
-  "version": "1.5.2",
+  "version": "1.5.3",
   "license": "MIT",
   "homepage": "https://github.com/smartphonedesign/react-datepicker-hijri",
   "publishConfig": {
@@ -66,6 +66,7 @@
     "isparta-loader": "^2.0.0",
     "karma": "^1.7.1",
     "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^1.1.1",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
@@ -120,7 +121,7 @@
     "lint": "run-p eslint flow sass-lint",
     "start": "cross-env MODULES=false node server.js",
     "test": "cross-env NODE_ENV=test karma start karma.conf.js --single-run",
-    "prepublish": "test $(npm -v | tr . '\\n' | head -n 1) -ge '4' || exit 1",
+    "prepublish": "npm run build",
     "prepare": "npm run build",
     "codecov": "cat coverage/*/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js",
     "prebuild": "rimraf es lib dist",
