--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "mocha": "^4.0.1",
     "moment": "^2.20.1",
     "moment-hijri": "^2.0.1",
+	"node-sass": "^5.0.0",
     "npm-run-all": "^4.1.2",
     "prettier": "^1.9.2",
     "react": "^16.1.0",
